Fix run with gradle command